@@ -60,6 +60,7 @@ LanguageTool Change Log
      sometimes empty, confusing the text check in WordPress
     -bitext rules were not disabled properly, even if they were specified with a
      proper parameter for the server; now it's fixed
+    -fixed problem with improper positions for some bitext rules (issue #218)
 
 Internal:
     -Words are not ignored anymore by the spell checker just because they occur in
